[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/chat-gpt/core/http.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/chat-gpt/ui/main_panel.gd" type="Script" id=2]

[node name="MainPanel" type="Control"]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
margin_right = 1260.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/HSplitContainer"]
margin_right = 1139.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/HSplitContainer/VSplitContainer"]
margin_right = 1139.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
collapsed = true

[node name="Title_Label" type="Label" parent="MarginContainer/HSplitContainer/VSplitContainer/VSplitContainer"]
margin_right = 1139.0
margin_bottom = 14.0

[node name="Response_RichText" type="RichTextLabel" parent="MarginContainer/HSplitContainer/VSplitContainer/VSplitContainer"]
margin_top = 26.0
margin_right = 1139.0
margin_bottom = 664.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/HSplitContainer/VSplitContainer"]
margin_top = 676.0
margin_right = 1139.0
margin_bottom = 700.0
size_flags_horizontal = 3
collapsed = true

[node name="Prompt_LineEdit" type="LineEdit" parent="MarginContainer/HSplitContainer/VSplitContainer/HSplitContainer"]
margin_right = 1029.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Send_Button" type="Button" parent="MarginContainer/HSplitContainer/VSplitContainer/HSplitContainer"]
margin_left = 1041.0
margin_right = 1139.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
text = "Send"

[node name="ItemList" type="ItemList" parent="MarginContainer/HSplitContainer"]
margin_left = 1151.0
margin_right = 1260.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false ]

[node name="HTTP" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="MarginContainer/HSplitContainer/VSplitContainer/HSplitContainer/Send_Button" to="." method="_on_Send_Button_pressed"]
[connection signal="_completed" from="HTTP" to="." method="_on_HTTP_completed"]
